change facebook like button

--- a/src/singular.html
+++ b/src/singular.html
@@ -398,7 +398,7 @@ color:{color:Links};
                 <a href="https://twitter.com/share" class="twitter-share-button" data-url="{Permalink}" data-text="{block:Title}{Title}{/block:Title}" data-via="spytwit" data-lang="en">Tweet</a>
             </div>
             <div class="socialIcon">
-                <fb:like href="{URLEncodedPermalink}" send="false" layout="button_count" width="110" show_faces="false" font="tahoma"></fb:like>
+                <iframe src="//www.facebook.com/plugins/like.php?href={URLEncodedPermalink}&amp;send=false&amp;layout=button_count&amp;width=110&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:110px; height:21px;" allowTransparency="true"></iframe>
             </div>
         </div>
     </div>
@@ -432,7 +432,7 @@ color:{color:Links};
                 <a href="https://twitter.com/share" class="twitter-share-button" data-url="{Permalink}" data-text="{Quote}" data-via="spytwit" data-lang="en">Tweet</a>
             </div>
             <div class="socialIcon">
-                <fb:like href="{URLEncodedPermalink}" send="false" layout="button_count" width="110" show_faces="false" font="tahoma"></fb:like>
+                <iframe src="//www.facebook.com/plugins/like.php?href={URLEncodedPermalink}&amp;send=false&amp;layout=button_count&amp;width=110&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:110px; height:21px;" allowTransparency="true"></iframe>
             </div>
         </div>
         {block:IndexPage}
@@ -467,7 +467,7 @@ color:{color:Links};
                 <a href="https://twitter.com/share" class="twitter-share-button" data-url="{Permalink}" data-text="{block:Title}{Title}{/block:Title}" data-via="spytwit" data-lang="en">Tweet</a>
             </div>
             <div class="socialIcon">
-                <fb:like href="{URLEncodedPermalink}" send="false" layout="button_count" width="110" show_faces="false" font="tahoma"></fb:like>
+                <iframe src="//www.facebook.com/plugins/like.php?href={URLEncodedPermalink}&amp;send=false&amp;layout=button_count&amp;width=110&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:110px; height:21px;" allowTransparency="true"></iframe>
             </div>
         </div>
     </div>
@@ -504,7 +504,7 @@ color:{color:Links};
                 <a href="https://twitter.com/share" class="twitter-share-button" data-url="{Permalink}" data-text="{block:Caption}{PlaintextCaption}{/block:Caption}" data-via="spytwit" data-lang="en">Tweet</a>
             </div>
             <div class="socialIcon">
-                <fb:like href="{URLEncodedPermalink}" send="false" layout="button_count" width="110" show_faces="false" font="tahoma"></fb:like>
+                <iframe src="//www.facebook.com/plugins/like.php?href={URLEncodedPermalink}&amp;send=false&amp;layout=button_count&amp;width=110&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:110px; height:21px;" allowTransparency="true"></iframe>
             </div>
         </div>
     </div>
@@ -541,7 +541,7 @@ color:{color:Links};
                 <a href="https://twitter.com/share" class="twitter-share-button" data-url="{Permalink}" data-text="{block:Title}{Title}{/block:Title}" data-via="spytwit" data-lang="en">Tweet</a>
             </div>
             <div class="socialIcon">
-                <fb:like href="{URLEncodedPermalink}" send="false" layout="button_count" width="110" show_faces="false" font="tahoma"></fb:like>
+                <iframe src="//www.facebook.com/plugins/like.php?href={URLEncodedPermalink}&amp;send=false&amp;layout=button_count&amp;width=110&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:110px; height:21px;" allowTransparency="true"></iframe>
             </div>
         </div>
     </div>
@@ -578,7 +578,7 @@ color:{color:Links};
                 <a href="https://twitter.com/share" class="twitter-share-button" data-url="{Permalink}" data-text="{block:Title}{Title}{/block:Title}" data-via="spytwit" data-lang="en">Tweet</a>
             </div>
             <div class="socialIcon">
-                <fb:like href="{URLEncodedPermalink}" send="false" layout="button_count" width="110" show_faces="false" font="tahoma"></fb:like>
+                <iframe src="//www.facebook.com/plugins/like.php?href={URLEncodedPermalink}&amp;send=false&amp;layout=button_count&amp;width=110&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:110px; height:21px;" allowTransparency="true"></iframe>
             </div>
         </div>
     </div>
@@ -616,7 +616,7 @@ color:{color:Links};
                 <a href="https://twitter.com/share" class="twitter-share-button" data-url="{Permalink}" data-text="{block:Title}{Title}{/block:Title}" data-via="spytwit" data-lang="en">Tweet</a>
             </div>
             <div class="socialIcon">
-                <fb:like href="{URLEncodedPermalink}" send="false" layout="button_count" width="110" show_faces="false" font="tahoma"></fb:like>
+                <iframe src="//www.facebook.com/plugins/like.php?href={URLEncodedPermalink}&amp;send=false&amp;layout=button_count&amp;width=110&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:110px; height:21px;" allowTransparency="true"></iframe>
             </div>
         </div>
     </div>
@@ -665,7 +665,7 @@ color:{color:Links};
                 <a href="https://twitter.com/share" class="twitter-share-button" data-url="{Permalink}" data-text="{block:Title}{Title}{/block:Title}" data-via="spytwit" data-lang="en">Tweet</a>
             </div>
             <div class="socialIcon">
-                <fb:like href="{URLEncodedPermalink}" send="false" layout="button_count" width="110" show_faces="false" font="tahoma"></fb:like>
+                <iframe src="//www.facebook.com/plugins/like.php?href={URLEncodedPermalink}&amp;send=false&amp;layout=button_count&amp;width=110&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:110px; height:21px;" allowTransparency="true"></iframe>
             </div>
         </div>
     </div>
@@ -707,7 +707,7 @@ color:{color:Links};
                 <a href="https://twitter.com/share" class="twitter-share-button" data-url="{Permalink}" data-text="{block:Title}{Title}{/block:Title}" data-via="spytwit" data-lang="en">Tweet</a>
             </div>
             <div class="socialIcon">
-                <fb:like href="{URLEncodedPermalink}" send="false" layout="button_count" width="110" show_faces="false" font="tahoma"></fb:like>
+                <iframe src="//www.facebook.com/plugins/like.php?href={URLEncodedPermalink}&amp;send=false&amp;layout=button_count&amp;width=110&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:110px; height:21px;" allowTransparency="true"></iframe>
             </div>
         </div>
     </div>
