Now Quote links are OK.

--- a/src/singular.html
+++ b/src/singular.html
@@ -33,7 +33,7 @@
 <meta property="og:image" content="{PortraitURL-48}" />
 {/block:Text}
 {block:Quote}
-<meta property="og:title" content="singular choice: quote by {block:Source}{Source}{/block:Source}" />
+<meta property="og:title" content="singular choice: quote by {block:Source}{PlaintextSource}{/block:Source}" />
 <meta property="og:image" content="http://plexonic.com/assets/singular/quote.png" />
 <meta property="og:site_name" content="singular choice" />
 {/block:Quote}
